--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "dev": "nodemon ./src/index.ts",
-    "start": "node ./dist/index.js",
+    "start": "node ./dist/src/index.js",
     "build": "tsc --build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
