--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -14,8 +14,8 @@
     "skipLibCheck": true,
     "strict": false,
     "target": "ES2022",
-    "outDir": "/dist",
+    "outDir": "./dist",
   },
-  "include": ["src/**/*.ts", "./api/*.ts"],
+  "include": ["./api/*.ts"],
   "exclude": ["jest.config.ts"]
 }
