updated jest test in backend to finish running

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,5 +56,5 @@ jobs:
       - name: Build the Backend
         run: npm run build
 
-      - name: Build the Backend
+      - name: Test the Backend
         run: npm run test
