Last commit didnt work when pulling this one should

--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -16,6 +16,8 @@
     "target": "ES2022",
     "outDir": "dist",
   },
-  "include": ["src/**/*"],
+  
+  "include": ["src/**/*",
+  "src/types/**/*" ],
   "exclude": ["jest.config.ts"]
 }
