--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/react": "19.0.10",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "jest": "^29.7.0",
