--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon ./src/index.ts",
     "start": "node ./dist/index.js",
     "build": "tsc --build",
-    "test": "jest --forceExit"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
