--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,13 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "openid-client": "^6.1.7",
     "pg": "^8.13.1",
-    "postgres": "^3.4.5"
+    "postgres": "^3.4.5",
+    "puppeteer": "^24.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
