--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,8 @@
     "express-session": "^1.18.1",
     "openid-client": "^6.1.7",
     "pg": "^8.13.1",
-    "postgres": "^3.4.5"
+    "postgres": "^3.4.5",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
