--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.6.1",
     "axios": "^1.7.9",
     "next": "15.1.4",
     "react": "^19.0.0",
