--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,7 +21,7 @@
     "openid-client": "^6.1.7",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
-    "puppeteer": "^24.4.0"
+    "puppeteer": "^24.4.0",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
