Made dashboard and game component styling better Single Game Page adjustments

--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -13,7 +13,7 @@ package-lock.json
 dist
 dist-ssr
 *.local
-
+../Backend/.cache
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
