--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "next": "15.1.4",
     "next-themes": "^0.4.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-select": "^5.10.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
